--- a/index.html
+++ b/index.html
@@ -87,13 +87,19 @@
                     <img src=""> tag is image
                     If you want to add new image - paste it inside the map "" at 
                     Github page and also type link to this image => scr="(here is a link)"
+                    To add images = you need to upload them to map ./portfolio/portfolio-images/portfolio-item-(number of portfolio item)/(image name.png)
+
+                3. For links to txt files of txt downloads - you need to add that files to map
+                ./portfolio/portfolio-txt/portfolio-item-(number of portfolio item)/(name of file.txt)
+                and write path at <a href="(path below)" target="_blank"> - for github link
+                                  <a href="(path below)" download> - for download
                  -->
 
     </section>
     <div class="portfolio__inner">
             <div class="inner__item hide">
                 <button class="return">Return</button>
-                <a href="./portfolio/portfolio-txt/portfolio-item-1/MlbPredicitionModel2019.txt" 
+                <a href="./portfolio/portfolio-txt/portfolio-item-1/MlbPredictionModel2019.txt" 
                 target="_blank"><span>See on Github</span></a>
                 <h2>Simulating the 2019 MLB Season in R</h2>
                 <h3>David Yamin</h3>
