--- a/index.html
+++ b/index.html
@@ -35,22 +35,27 @@
             <div class="skills__item">
                 <h2>R</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, eum.</p>
+                <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
                 <h2>Pyton</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, eum.</p>
+                <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
                 <h2>SQL</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, vitae?</p>
+                <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
                 <h2>Tableau</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, corporis.</p>
+                <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
                 <h2>Advanced Exel</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, fugiat!</p>
+                <!-- Here higher you can change <p> value -->
             </div>
         </div>
     </section>
@@ -91,8 +96,8 @@
 
                 3. For links to txt files of txt downloads - you need to add that files to map
                 ./portfolio/portfolio-txt/portfolio-item-(number of portfolio item)/(name of file.txt)
-                and write path at <a href="(path below)" target="_blank"> - for github link
-                                  <a href="(path below)" download> - for download
+                and write path at <a href="(path higher)" target="_blank"> - for github link
+                                  <a href="(path higher)" download> - for download
                  -->
 
     </section>
