--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <img src="./images/portfolio-pic.png" alt="">
         </div>
         <div class="about-me">
-            <h1>Hello!</h1>
-            <h2>My name is David Yamnin.</h2>
-            <h2>I am a data scientist.</h2>
+            <h2>David Yamnin</h2>
+            <h2>Data Scientist Portfolio</h2>
         </div>
     </main>
     <section class="skills">
@@ -38,7 +37,7 @@
                 <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
-                <h2>Pyton</h2>
+                <h2>Phyton</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, eum.</p>
                 <!-- Here higher you can change <p> value -->
             </div>
