--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- Here higher you can change <p> value -->
             </div>
             <div class="skills__item">
-                <h2>Phyton</h2>
+                <h2>Python</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, eum.</p>
                 <!-- Here higher you can change <p> value -->
             </div>
